# Valery_ASI

./: README.md
Release/v0.001/backend/: .coverage  CMakeLists.txt  MANIFEST.in  build_protos.py  run.sh  setup.cfg  setup.py
Release/v0.001/backend/cmake/: FindZeroMQ.cmake
Release/v0.001/backend/docs/: api.md
Release/v0.001/backend/src/: main.cpp
Release/v0.001/backend/src/agent_ai/: __init__.py  config.py
Release/v0.001/backend/src/agent_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Release/v0.001/backend/src/agent_ai/ai/domains/: __init__.py  base_imports.py  base_manager.py  domain_imports.py  domain_registry.py  schemas.py
Release/v0.001/backend/src/agent_ai/ai/domains/blockchain/: manager.py  schemas.py
Release/v0.001/backend/src/agent_ai/ai/domains/business/: __init__.py  manager.py  schemas.py
Release/v0.001/backend/src/agent_ai/ai/domains/finance/: __init__.py  schemas.py
Release/v0.001/backend/src/agent_ai/ai/domains/iot/: __init__.py  manager.py  schemas.py
Release/v0.001/backend/src/agent_ai/ai/domains/medical/: manager.py
Release/v0.001/backend/src/agent_ai/core/: __init__.py  exceptions.py
Release/v0.001/backend/src/agent_ai/fastapi/: __init__.py
Release/v0.001/backend/src/agent_ai/protos/: query.proto  query_pb2.py  query_pb2_grpc.py
Release/v0.001/backend/src/agent_ai/zmq/: zmq.py
Release/v0.001/backend/src/include/: config.h  zmqthreadpool.h
Release/v0.001/backend/src/tests/cpp/: test_main.cpp
Release/v0.001/backend/src/tests/python/: test_config.py
Release/v0.001/backend/src/tests/python/ai/: test_manager_ai.py
(+170 files in other folders)
